--- a/templates/buy.tmpl
+++ b/templates/buy.tmpl
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<link rel="stylesheet" href="css/semantic.min.css">
+
 <h1>Reserve a space!</h1>
 
 <form action="" method="POST">
